--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "manifest_version": 2,
 
   "name": "PageSpeed Test Extension",
-  "description": "This extension will analyze a page using Google's PageSpeed API",
+  "description": "This extension will analyze a page using Google's PageSpeed",
   "version": "1.0",
 
   "browser_action": {
-   "default_icon": "icon.png",
+   "default_icon": "icon128.png",
    "default_popup": "popup.html"
   },
   "permissions": [
